[package]
name = "gitt"
version = "0.1.0"
authors = ["Michael Edwards <medwards@walledcity.ca>"]
edition = "2018"

[dependencies]
git2 = "0.13"
crossterm = { version = "0.19" }
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
cassowary = "0.3"  # keep this in sync /w tui?
clap = { version = "3.1.0" }
chrono = "0.4.19"
