[package]
name = "gitt"
authors = ["Michael Edwards <medwards@walledcity.ca>"]
version = "0.2.2"
description = "gitk but in your terminal"
repository = "https://github.com/medwards/gitt"
license = "GPL-3.0-or-later"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["git", "terminal", "ui"]
edition = "2018"

[dependencies]
git2 = { version = "0.13", default-features = false }
crossterm = { version = "0.19" }
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
cassowary = "0.3"  # keep this in sync /w tui?
clap = { version = "3.1.0" }
chrono = "0.4.19"
